# omni-retrieval

./: .env.example  .gitignore  README.md  pyproject.toml  ruff.toml
configs/: base.yaml
scripts/: ingest.py  query.py  test_llm.py
src/: config.py  context.py  llm.py  pipeline.py
src/indexing/: chunker.py  vector_indexer.py
src/post_retrieval/: __init__.py  reranker.py
src/retrieval/: __init__.py  dense_retriever.py  hybrid_search.py
